# eth-denver-2024

./: package-lock.json
ide-backend/: README.md  main.py  pyproject.toml
ide-backend/app/: app.py  auth.py  db.py
ide-backend/app/rollup/: rollup.py
ide-backend/app/rollup/template_files/: templateContract.sol
spin-app/: package.json  tailwind.config.ts
spin-app/src/app/components/main/: Account.tsx  FunsPanel.tsx  TopBar.tsx
spin-app/src/app/components/steps/: BusinessLogic.tsx  RollUpConfiguration.tsx
spin-app/src/app/services/: api_service.tsx
src/app/: AuthProvider.tsx  layout.tsx  page.tsx
src/app/components/main/: AIAssistant.tsx  SideBar.tsx
src/app/components/steps/: Deploy.tsx  LocalDevelopment.tsx
src/app/components/util/: DropDownMenu.tsx  IntInput.tsx  Switcher.module.css  Switcher.tsx
src/app/github/callback/: page.tsx
src/app/styles/: globals.css  icons.ts
